# nufuturo-ai-observability-sandbox

./: .gitignore  README.md  prometheus-mcp.sh
anomaly-detection-mcp/: .env.sample  .gitignore  README.md  pyproject.toml
anomaly-detection-mcp/docs/: TECHNICAL_GUIDE.md
anomaly-detection-mcp/src/: __init__.py  logger.py  main.py  server.py
anomaly-detection-mcp/src/models/: isolation_forest.py  matrix_profile.py  prophet.py  zscore.py
logs-analyzer/: .dockerignore  .gitignore  Dockerfile  README.md  TECHNICAL_GUIDE.md  docker-compose.yml  logsanalyser-json.py  logsanalyser.py  main.py  pyproject.toml  style.py
logs-analyzer-cli/: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
logs-analyzer-cli/docs/: TECHNICAL_GUIDE.md
logs-analyzer-lda/: main.py
logs-analyzer/.streamlit/: config.toml
logs-analyzer/src/: logsanalyser-alexandria.py  logsanalyser-json.py  logsanalyser-txt.py  logsanalyser.py  validade_log_counts.py
prometheus-mcp-server/: README.md
streamlit-dashboard/: .dockerignore  .env.sample  README.md  app.py  calculate_std_dev.py  custom_alerts.py  metrics.txt  mycron  prophet_analysis.py  requirements.txt  style.py
vision-prometheus/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  homepage.py  isolation_forest.py  main.py  matrix_profile.py  pyproject.toml  style.py
vision-prometheus/docs/: TECHNICAL_GUIDE.md
vision-prometheus/src/: app.py
vision-prometheus/src/models/: homepage.py  isolation_forest.py  matrix_profile.py  prophet_analysis.py  z_score.py
