[project]
name = "vision-prometheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonpath-ng>=1.7.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "prometheus-api-client>=0.7.0",
    "prometheus-pandas>=0.3.3",
    "prophet>=1.3.0",
    "ptvsd>=4.3.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.53.1",
    "stumpy>=1.13.0",
]
